--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAAG Alumni Network</title>
+    <title>JAAG</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo.png" alt="JAAG Logo">
+            <img src="images/jaag-logo.png" alt="JAAG Logo">
         </div>
         <div class="form-link">
             <a href="https://forms.google.com" target="_blank">Add Your Profile <i class="fas fa-external-link-alt"></i></a>
