--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <div class="logo">
             <img src="images/jaag-logo.png" alt="JAAG Logo">
+            <h2 class="logo-text">JAAG - JNV Alumni Association of Gandhinagar</h2>
         </div>
         <div class="form-link">
             <a href="https://forms.google.com" target="_blank">Add Your Profile <i class="fas fa-external-link-alt"></i></a>
@@ -20,7 +21,7 @@
 
     <section class="hero">
         <h1>JAAG Alumni Network</h1>
-        <p>Connect with our extensive network of talented alumni</p>
+        <p>Connect with our extensive network of talented alumni. Our alumni achievements go beyond what words can capture here.</p>
     </section>
 
     <section class="filters">
