Unlist information added

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 JAAG Alumni Network. All rights reserved.</p>
+        <p>&copy; 2025 JAAG Alumni Network. All rights reserved. If you'd like to update your information or prefer not to display your details on this site, please contact us via the JAAG WhatsApp group.</p>
     </footer>
 
     <script src="script.js"></script>
