form link updated

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>(JNV Alumni Association of Gandhinagar)</p>
         </div>
         <div class="form-link">
-            <a href="https://forms.google.com" target="_blank"><span class="link-text">Add Your Profile</span> <i class="fas fa-external-link-alt"></i></a>
+            <a href="https://forms.gle/Ds9SMx1ZM3qiU9dh9" target="_blank"><span class="link-text">Add Your Profile</span> <i class="fas fa-external-link-alt"></i></a>
         </div>
     </header>
 
